# mono-pub

./: .gitignore  README.md  configuartion.yaml  configuartion_example.yaml  pyproject.toml
_posts/: 2026-07-01-mein-erster-post.md
mono_pub/: config.py  main.py
mono_pub/commands/: list.py  open.py
mono_pub/process/: publish.py  release.py
mono_tools/: config.py  main.py
mono_tools/commands/: list.py  new.py  publish.py  release.py
mono_tools/process/: compile.py  publish.py  release.py  release_config.py  validate.py
mono_tools/templates/: music.md.j2  post.md.j2  project.md.j2
src/mono_pub/: main.py
src/mono_pub/commands/: list.py  new.py  open.py  publish.py  release.py  tui.py
src/mono_pub/process/: assets.py  compile.py  publish.py  validate.py
src/mono_pub/templates/: post.md.j2
src/mono_pub/tui_interface/: __init__.py  app.py
