[project]
name = "mono-pub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "python-frontmatter>=1.3.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
]

[project.scripts]
mono-pub = "mono_pub.main:app"