[project]
name = "mono-pub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "python-frontmatter>=1.3.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
]

[project.optional-dependencies]
tui = [
    "textual>=6.6.0",
]

[project.scripts]
mono-pub = "mono_pub.main:app"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"